kubernetes/apps/ai/comfy-proxy/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfy-route
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: https
    port: 80
  hostnames:
  - comfy.${PRIVATE_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: comfy-backend
      port: 80
      weight: 1
